GL/src/test/deca/syntax/invalid/deca_sans_objet/parenthese_manquante.deca
// Description :
//  test parenthese manquante
//
// Resultat :
// Erreur lexicale
// Ligne 8 : caractère inattendu '{'
{
    if (true {
        print(1);
    }
}
